# python-flask-rest-jwt

./: .gitignore  README.md  config.py  data.json  pyproject.toml
app/: __init__.py  db.py  errors.py  models.py
app/api/: __init__.py  auth.py  ships.py  users.py
app/auth/: __init__.py  auth.py
tests/: conftest.py  test_api_auth.py  test_api_general.py  test_api_ships.py  test_api_users.py  test_errors.py  test_ship_model.py  test_user_model.py  test_user_models.py
