[tool.poetry]
name = "flask-rest-jwt"
version = "1.0.0"
description = "A (very) basic Flask REST API example using JWT Authentication"
authors = ["Toxe <toxe@toxe.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
