[tool.poetry]
name = "flask-rest-jwt"
version = "1.0.0"
description = "A (very) basic Flask REST API example using JWT Authentication"
authors = ["Toxe <toxe@toxe.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-jwt-extended = "^3.24.1"
python-dotenv = "^0.14.0"
marshmallow = "^3.8.0"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
pylint = "^2.6.0"
pylint-flask = "^0.6"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
